# 2.6-Project-Backend

./: .env.example  .gitignore  README.md  pyproject.toml
api/: api.py  serializers.py  urls.py
backend/: settings.py  urls.py
shopping/: admin.py  models.py
shopping/management/commands/: create_games.py
shopping/migrations/: 0001_initial.py  0002_initial.py  0003_genre_platform_alter_game_options_game_created_at_and_more.py  0004_order.py  0005_alter_order_id.py  0006_orderitem.py  0007_remove_game_download_link_remove_game_trailer_url.py
users/: admin.py  backends.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py  0003_address_creditcard.py  0004_remove_creditcard_card_number_remove_creditcard_cvv_and_more.py
